--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php",
+			"app/tests/ControllerTestCase.php",
 			"app/libraries"
 		]
 	},
