Verify if the product have LM before importing

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ composer.phar
 composer.lock
 .DS_Store.elasticbeanstalk/.elasticbeanstalk/
 app/storage/csv*
+app/storage/zip_*
 public/assets/img/categories/*
+public/assets/img/products/*
