Recent laravel4 changes

--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,8 @@
 			"app/models/traits/ToSelect.php"
 		]
 	},
+	"scripts": {
+		"post-update-cmd": "php artisan optimize"
+	},
 	"minimum-stability": "dev"
 }
