--- a/composer.json
+++ b/composer.json
@@ -36,5 +36,8 @@
 	"scripts": {
 		"post-update-cmd": "php artisan optimize"
 	},
+	"config": {
+		"preferred-install": "dist"
+	},
 	"minimum-stability": "dev"
 }
