--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"require": {
-		"laravel/framework": "dev-master#201484e9f2c39b06269d0745fb5dae2ef9c1b530",
+		"laravel/framework": "dev-master#fc9760ad63e2421e484410394fd97e393fb21962",
 		"way/generators": "dev-master",
 		"navruzm/lmongo": "dev-master#d673d7762028ab53a54f227caa8882830e80c427",
 		"keboola/csv": "1.0.9",
@@ -34,7 +34,8 @@
 		]
 	},
 	"scripts": {
-		"post-update-cmd": "php artisan optimize"
+		"pre-update-cmd": "php -r \"@unlink('bootstrap/compiled.php');\"",
+	    "post-update-cmd": "php artisan optimize"
 	},
 	"config": {
 		"preferred-install": "dist"
