--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
 	"require": {
-		"laravel/framework": "dev-master#fc9760ad63e2421e484410394fd97e393fb21962",
+		"laravel/framework": "dev-master#d01a43c0527a97caeca8cbe95274fcccbe2c196a",
 		"way/generators": "dev-master",
 		"navruzm/lmongo": "dev-master#d673d7762028ab53a54f227caa8882830e80c427",
 		"keboola/csv": "1.0.9",
 		"zizaco/confide": "dev-master",
 		"zizaco/lessy": "dev-master",
-		"jasonlewis/basset": "dev-master",
+		"jasonlewis/basset": "dev-master#b5dd8228474ffd8a439234832e83e23531e7f8bf",
 		"vipsoft/unzip": "dev-master",
 		"oyatel/amazon-s3-php-class": "dev-master",
 		"pda/pheanstalk": "dev-master",
