--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 		"way/generators": "dev-master",
 		"navruzm/lmongo": "dev-master#d673d7762028ab53a54f227caa8882830e80c427",
 		"keboola/csv": "1.0.9",
+		"zizaco/mongolid-laravel": "dev-master",
 		"zizaco/confide": "dev-master",
 		"zizaco/lessy": "dev-master",
 		"jasonlewis/basset": "dev-master#b5dd8228474ffd8a439234832e83e23531e7f8bf",
